<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/prodImgDesc"
            android:scaleType="centerCrop"
            android:src="@drawable/garden_bucket"
            tools:background="#999"
            tools:srcCompat="@drawable/garden_bucket" />

        <TextView
            android:id="@+id/productTitle"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:text="Product Title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            tools:text="@tools:sample/lorem" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="270dp"
                android:layout_height="70dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:clickable="false"
                android:enabled="false"
                android:onClick="buttonSellerProfileOnClick"
                android:text="@string/sellerProfileButton"
                android:textColor="#212121"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/bidHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/historyBid"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="5dp"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:text="Current Bid: $1.99" />

        <TextView
            android:id="@+id/bidHistory1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:text="" />

        <TextView
            android:id="@+id/bidHistory2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:text="" />

        <TextView
            android:id="@+id/bidHistory3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:text="" />

        <TextView
            android:id="@+id/highestBid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:text="" />

        <EditText
            android:id="@+id/withDrawAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:hint="@string/bidHint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bidButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:minHeight="60dp"
            android:onClick="buttonOnBidClick"
            android:text="@string/bidButton"
            android:textColor="#212121"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/chatLabelTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/chat"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ChatLog4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:text="" />

        <TextView
            android:id="@+id/ChatLog3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:text="" />

        <TextView
            android:id="@+id/ChatLog2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:text="" />

        <TextView
            android:id="@+id/ChatLog1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:text="" />

        <EditText
            android:id="@+id/chatInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:shadowColor="#C0C0C0"
            android:hint="@string/enterChatMessage"
            android:inputType="text"
            android:textSize="20sp"
            android:minHeight="48dp"/>

        <Button
            android:id="@+id/sendChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:minHeight="60dp"
            android:onClick="updateChat"
            android:text="@string/enterChat"
            android:textColor="#212121"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>